visualtree_errors.log

module.js:340
    throw err;
          ^
Error: Cannot find module 'express'
    at Function.Module._resolveFilename (module.js:338:15)
    at Function.Module._load (module.js:280:25)
    at Module.require (module.js:364:17)
    at require (module.js:380:17)
    at Object.<anonymous> (/var/www/app.js:11:11)
    at Module._compile (module.js:456:26)
    at Object.Module._extensions..js (module.js:474:10)
    at Module.load (module.js:356:32)
    at Function.Module._load (module.js:312:12)
    at Function.Module.runMain (module.js:497:10)

module.js:340
    throw err;
          ^
Error: Cannot find module 'colors'
    at Function.Module._resolveFilename (module.js:338:15)
    at Function.Module._load (module.js:280:25)
    at Module.require (module.js:364:17)
    at require (module.js:380:17)
    at Object.<anonymous> (/var/www/app.js:14:14)
    at Module._compile (module.js:456:26)
    at Object.Module._extensions..js (module.js:474:10)
    at Module.load (module.js:356:32)
    at Function.Module._load (module.js:312:12)
    at Function.Module.runMain (module.js:497:10)
ReferenceError: /var/www/app/server/views/layout.jade:4
    2| html
    3| 	head
  > 4| 		title= title
    5| 		link(rel='stylesheet', href='/vendor/bootstrap.min.css')
    6| 		meta(name='viewport', content='width=device-width, initial-scale=1.0')
    7| 		link(rel='stylesheet', href='/vendor/bootstrap-responsive.css')

title is not defined
    at eval (eval at <anonymous> (/var/www/node_modules/jade/lib/jade.js:176:8), <anonymous>:20:15)
    at Object.<anonymous> (/var/www/node_modules/jade/lib/jade.js:181:12)
    at ServerResponse.res._render (/var/www/node_modules/express/lib/view.js:425:21)
    at ServerResponse.res.render (/var/www/node_modules/express/lib/view.js:318:17)
    at ServerResponse.res._render (/var/www/node_modules/express/lib/view.js:432:10)
    at ServerResponse.res.render (/var/www/node_modules/express/lib/view.js:318:17)
    at /var/www/app/server/router.js:49:7
    at callbacks (/var/www/node_modules/express/lib/router/index.js:272:11)
    at param (/var/www/node_modules/express/lib/router/index.js:246:11)
    at pass (/var/www/node_modules/express/lib/router/index.js:253:5)
[31mBad Data[39m
[31m{"mac[39m
{}
[31mBad Data[39m
[31m{"mac[39m
[31mBad Data[39m
[31m{"mac":"[39m
{}
[31mBad Data[39m
[31m{"mac":"[39m
[31mBad Data[39m
[31m{"mac":"00:06:66:50:64:db","h":"h"[39m
{}
[31mBad Data[39m
[31m{"mac":"00:06:66:50:64:db","h":"h"[39m
[31mBad Data[39m
[31m{"ma[39m
{}
[31mBad Data[39m
[31m{"ma[39m
Error: /var/www/app/server/views/holiday.jade:11
    9| 			param(name="movie", value="holiday_tree.swf")
    10| 			param(name="quality", value="high")
  > 11| 	                param (name="bgcolor" value="#ffffff")
    12| 	                param (name="allowScriptAccess" value="sameDomain")
    13| 	                param (name="allowFullScreen", value="true")
    14| 		

Invalid indentation, you can use tabs or spaces but not both
    at Object.Lexer.indent (/var/www/node_modules/jade/lib/lexer.js:672:15)
    at Object.Lexer.next (/var/www/node_modules/jade/lib/lexer.js:770:15)
    at Object.Lexer.lookahead (/var/www/node_modules/jade/lib/lexer.js:106:46)
    at Object.Parser.lookahead (/var/www/node_modules/jade/lib/parser.js:113:23)
    at Object.Parser.parseTag (/var/www/node_modules/jade/lib/parser.js:610:21)
    at Object.Parser.parseExpr (/var/www/node_modules/jade/lib/parser.js:195:21)
    at Object.Parser.block (/var/www/node_modules/jade/lib/parser.js:584:25)
    at Object.Parser.tag (/var/www/node_modules/jade/lib/parser.js:702:26)
    at Object.Parser.parseTag (/var/www/node_modules/jade/lib/parser.js:621:17)
    at Object.Parser.parseExpr (/var/www/node_modules/jade/lib/parser.js:195:21)
Error: /var/www/app/server/views/holiday.jade:11
    9| 			param(name="movie", value="holiday_tree.swf")
    10| 			param(name="quality", value="high")
  > 11| 	                param (name="bgcolor", value="#ffffff")
    12| 	                param (name="allowScriptAccess", value="sameDomain")
    13| 	                param (name="allowFullScreen", value="true")
    14| 		

Invalid indentation, you can use tabs or spaces but not both
    at Object.Lexer.indent (/var/www/node_modules/jade/lib/lexer.js:672:15)
    at Object.Lexer.next (/var/www/node_modules/jade/lib/lexer.js:770:15)
    at Object.Lexer.lookahead (/var/www/node_modules/jade/lib/lexer.js:106:46)
    at Object.Parser.lookahead (/var/www/node_modules/jade/lib/parser.js:113:23)
    at Object.Parser.parseTag (/var/www/node_modules/jade/lib/parser.js:610:21)
    at Object.Parser.parseExpr (/var/www/node_modules/jade/lib/parser.js:195:21)
    at Object.Parser.block (/var/www/node_modules/jade/lib/parser.js:584:25)
    at Object.Parser.tag (/var/www/node_modules/jade/lib/parser.js:702:26)
    at Object.Parser.parseTag (/var/www/node_modules/jade/lib/parser.js:621:17)
    at Object.Parser.parseExpr (/var/www/node_modules/jade/lib/parser.js:195:21)
Error: /var/www/app/server/views/holiday.jade:11
    9| 			param(name="movie", value="holiday_tree.swf")
    10| 			param(name="quality", value="high")
  > 11| 	                param (name="bgcolor", value="#ffffff")
    12| 	                param (name="allowScriptAccess", value="sameDomain")
    13| 	                param (name="allowFullScreen", value="true")
    14| 		

Invalid indentation, you can use tabs or spaces but not both
    at Object.Lexer.indent (/var/www/node_modules/jade/lib/lexer.js:672:15)
    at Object.Lexer.next (/var/www/node_modules/jade/lib/lexer.js:770:15)
    at Object.Lexer.lookahead (/var/www/node_modules/jade/lib/lexer.js:106:46)
    at Object.Parser.lookahead (/var/www/node_modules/jade/lib/parser.js:113:23)
    at Object.Parser.parseTag (/var/www/node_modules/jade/lib/parser.js:610:21)
    at Object.Parser.parseExpr (/var/www/node_modules/jade/lib/parser.js:195:21)
    at Object.Parser.block (/var/www/node_modules/jade/lib/parser.js:584:25)
    at Object.Parser.tag (/var/www/node_modules/jade/lib/parser.js:702:26)
    at Object.Parser.parseTag (/var/www/node_modules/jade/lib/parser.js:621:17)
    at Object.Parser.parseExpr (/var/www/node_modules/jade/lib/parser.js:195:21)

/var/www/app/config.js:21
		app.use(express.basicAuth(‘testUser’, 'testPass')); /* Basic Auth */
		                          ^
SyntaxError: Unexpected token ILLEGAL
    at Module._compile (module.js:439:25)
    at Object.Module._extensions..js (module.js:474:10)
    at Module.load (module.js:356:32)
    at Function.Module._load (module.js:312:12)
    at Module.require (module.js:364:17)
    at require (module.js:380:17)
    at Object.<anonymous> (/var/www/app.js:35:1)
    at Module._compile (module.js:456:26)
    at Object.Module._extensions..js (module.js:474:10)
    at Module.load (module.js:356:32)
